# eduport

./: .gitignore  Cargo.toml  HANDOVER.md  README.md  README.tr.md  RELEASE.md  STATE_OF_THE_UNION.md
.github/: release-body.md
.github/workflows/: ci.yml  desktop-build.yml  publish-eduport-core.yml  release.yml
crates/eduport-core/: Cargo.toml
crates/eduport-core/src/: eml.rs  entity_type.rs  lib.rs  query.rs  settings.rs  slug.rs  watcher.rs  wikilink.rs
crates/eduport-core/src/entity/: mod.rs  resources.rs  store.rs  types.rs
crates/eduport-core/src/index/: mod.rs  reader.rs  reconcile.rs  schema.rs  writer.rs
crates/eduport-core/src/schema/: builtins.rs  mod.rs  property.rs  schema.rs  store.rs  vaultdb_bridge.rs
crates/eduport-core/src/view/: filter_tree.rs  mod.rs  store.rs  types.rs
crates/eduport-core/tests/: orm_smoke.rs
crates/eduport-tauri/: Cargo.toml  tauri.conf.json
crates/eduport-tauri/icons/: icon.icns
crates/eduport-tauri/src/: core_state.rs  lib.rs  reveal.rs  sidecar.rs
crates/eduport-tauri/src/commands/: checkbox.rs  eml.rs  entity.rs  mod.rs  properties.rs  schema.rs  search.rs  settings.rs  status.rs  trash.rs  view.rs
docs/: packaging.md
docs/superpowers/plans/: 2026-05-06-eduport-frontend-plan.md  2026-05-06-eduport-shell-plan.md  2026-05-06-eduport-sidecar-plan.md  2026-05-09-notion-experience-plan.md  2026-05-09-phase1-vaultdb-workspace-split-plan.md  2026-05-10-phase2a-foundation-types-plan.md  2026-05-10-phase2b-query-mutation-graph-api-plan.md  2026-05-10-phase3-vaultdb-mcp-plan.md
docs/superpowers/specs/: 2026-05-06-eduport-design.md  2026-05-09-custom-fields-design.md  2026-05-09-vaultdb-rewrite-design.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: bindings.ts  keyboard.ts  markdown.ts  sample-data.ts  tauri.ts  types.ts
frontend/src/lib/api/: checkbox.ts  client.ts  eml.ts  entities.ts  metadata.ts  schema.ts  search.ts  settings.ts  status.ts  trash.ts  views.ts
frontend/src/lib/components/: BodyEditor.svelte  BodyView.svelte  CommandPalette.svelte  DetailField.svelte  DetailPanel.svelte  EmailGroupedList.svelte  EntityBodyEditor.svelte  EntityForm.svelte  EntityList.svelte  EntityListSkeleton.svelte  EntityRow.svelte  EntityWorkspace.svelte  FilterChips.svelte  FirstRunPrompt.svelte  GroupedList.svelte  Icon.svelte  KanbanBoard.svelte  ResourceListEditor.svelte  SaveViewDialog.svelte  ShortcutsHelp.svelte  Sidebar.svelte  TableView.svelte  TagPicker.svelte  ToastHost.svelte  TopBar.svelte  ViewTabs.svelte  WikilinkListPicker.svelte  WikilinkPicker.svelte
frontend/src/lib/components/properties/: CardPropertiesMenu.svelte  ColumnVisibilityMenu.svelte  FilterBuilder.svelte  PropertyCell.svelte  PropertyConfigDialog.svelte  PropertyEditor.svelte  PropertyFilterBar.svelte  PropertyTypeIcon.svelte  PropertyValue.svelte  PropertyWarningChip.svelte  SelectCombobox.svelte
frontend/src/lib/editor/: all-entities.ts  markdown-bridge.ts  slash-menu.ts  view-embed.ts  wikilink.ts
frontend/src/lib/entities/: cosmetics.ts  meta.ts
frontend/src/lib/stores/: filters.ts  schema.ts  settings.ts  status.ts  toasts.ts  views.ts
frontend/src/lib/types/: filter.ts  schema.ts  view.ts
frontend/src/lib/utils/: viewPipeline.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/[type]/: +layout.svelte  +page.svelte
frontend/src/routes/[type]/[fileId]/: +page.svelte
frontend/src/routes/deadlines/: +page.svelte
frontend/src/routes/notes/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/settings/schema/: +page.svelte
frontend/src/routes/status/: +page.svelte
frontend/src/routes/trash/: +page.svelte
frontend/static/fonts/: LICENSE.txt
frontend/tests/unit/: client.test.ts  filters.test.ts  markdown.test.ts  viewPipeline.test.ts
scripts/: build_desktop.py  build_sidecar.py  build_tauri_prereqs.mjs  build_tauri_prereqs.py
sidecar/: pyinstaller_entry.py  pyproject.toml
sidecar/src/eduport/: __init__.py  cli.py  ids.py  logging_setup.py  settings.py  slug.py  watcher.py
sidecar/src/eduport/api/: app.py  checkbox.py  deps.py  eml_import.py  entities.py  metadata_api.py  properties_api.py  schema_api.py  search.py  settings_api.py  status_api.py  trash_api.py  views_api.py
sidecar/src/eduport/index/: reader.py  reconcile.py  schema.py  writer.py
sidecar/src/eduport/models/: __init__.py  application.py  base.py  document.py  email.py  lab.py  note.py  person.py  program.py  schema.py  university.py  view.py
sidecar/src/eduport/parsers/: checkboxes.py  custom_fields.py  eml.py  entity.py  frontmatter.py  wikilinks.py
sidecar/src/eduport/store/: files.py  schema_store.py  trash.py  view_store.py
sidecar/tests/: conftest.py  test_ids.py  test_logging_setup.py  test_models.py  test_models_schema.py  test_models_view.py  test_settings.py  test_slug.py  test_watcher.py
sidecar/tests/fixtures/: sample.eml
sidecar/tests/test_api/: test_checkbox.py  test_e2e.py  test_eml_import.py  test_entities.py  test_lifespan.py  test_properties_api.py  test_schema_api.py  test_search.py  test_settings_api.py  test_status_trash.py  test_views_api.py
sidecar/tests/test_index/: test_fts5_custom.py  test_properties.py  test_reader.py  test_reconcile.py  test_reindex_on_schema_change.py  test_schema.py  test_writer.py
sidecar/tests/test_parsers/: test_checkboxes.py  test_custom_fields.py  test_eml.py  test_entity.py  test_frontmatter.py  test_wikilinks.py
sidecar/tests/test_store/: test_files.py  test_schema_store.py  test_trash.py  test_view_store.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  reveal.rs  sidecar.rs
