[project]
name = "eduport"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rusenbb", email = "rusenbirben@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "markdown-it-py[linkify,plugins]>=4.0.0",
    "markdownify>=1.2.2",
    "platformdirs>=4.9.6",
    "pydantic>=2",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.27",
    "send2trash>=2.1.0",
    "tomli-w>=1.2.0",
    "uvicorn[standard]>=0.46.0",
    "watchdog>=6.0.0",
]

[project.scripts]
eduport = "eduport:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
