[package]
name = "eduport"
version = "0.1.1"
description = "Eduport — university application tracker desktop shell"
authors = ["rusenbb"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "eduport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
toml = "0.8"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
