[package]
name = "eduport-core"
description = "Eduport's domain layer — typed schema, FTS5, watcher, EML import — over vaultdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vaultdb-core = { path = "../../../../researches/vaultdb/crates/vaultdb-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
regex = "1"
url = { version = "2", features = ["serde"] }
rand = "0.8"
mailparse = "0.16"
html2text = "0.15"
# `bundled` vendors a known-good SQLite (with FTS5 compiled in), removing the
# system-SQLite version drift that bit the Python sidecar on certain Linux
# distros. `serde_json` is reused for the FTS5-side frontmatter blob and for
# JSON-encoded multi-select property values.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
